@@ -21,12 +21,12 @@ Boundary::~Boundary()
 //-----------------------------------------------------------------------------
 void Boundary::init()
 {
-  if ( grid->bd.empty() )
+  if ( grid->bd->empty() )
     BoundaryInit::init(*grid);
 }
 //-----------------------------------------------------------------------------
 void Boundary::clear()
 {
-  grid->bd.clear();
+  grid->bd->clear();
 }
 //-----------------------------------------------------------------------------
