@@ -1,3 +1,4 @@
+ - Add iterators for faces and edges on a boundary
  - New class GridHierarchy
 0.3.10
  - Use new boundary structure in Galerkin
